--- a/views/html/listaEspecifica2.html
+++ b/views/html/listaEspecifica2.html
@@ -96,7 +96,7 @@
 								<th data-field="d" class="text-wrap">  													Descripcion		</span style="text-align: left;"> </th> 
 								<th data-field="r" data-width="20" data-width-unit="%"data-card-visible="false">  		Rubro			</span> </th> 
 								
-								<th data-field="s" data-width="90" class="text-right" >  Precio sin IVA 	</span> </th> -->
+								<!--<th data-field="s" data-width="90" class="text-right" >  Precio sin IVA 	</span> </th> -->
 								<th data-field="pf" data-width="90" data-align="center">  								Precio con IVA 	 </th>  
 							  </tr> 
 						</thead> 
