--- a/views/html/faq.html
+++ b/views/html/faq.html
@@ -40,9 +40,9 @@
 		<ul class="nav-list">
 			<li><a class="" href="../../index.html" 		title="">Home</a></li>
 			<li><a class="" href="listas.html"				title="">Listas</a></li>
-			<li><a class="" href="ofertas.html" 			title="">Ofertas</a></li>
+			<li><a class="" href="login.html" 			title="">Ofertas</a></li>
 			<li><a class="" href="faq.html" 				title="">Abrir un lubricentro</a></li>
-			<li><a class="" href="resumenDeCuenta.html" 	title="" style="color:orange">Ingresar a mi cuenta</a></li>								
+						
 		</ul>		
 	 </nav>  <!-- end #menu-nav-wrap -->
 
