--- a/views/html/listas.html
+++ b/views/html/listas.html
@@ -33,15 +33,14 @@
 		  <span class="header-menu-text">Menu</span>
 		   <span class="header-menu-icon"></span>
 	</a> 
-	<nav id="menu-nav-wrap">
+	<nav id="menu-nav-wrap" style="text-align:left;">
 		<a href="#0" class="close-button" title="close"><span>Close</span></a>	
 		<h3>Renova</h3>  
 		<ul class="nav-list">
 			<li><a class="" href="../../index.html" 		title="">Home</a></li>
 			<li><a class="" href="listas.html"				title="">Listas</a></li>
-			<li><a class="" href="ofertas.html" 			title="">Ofertas</a></li>
-			<li><a class="" href="faq.html" 				title="">Abrir un lubricentro</a></li>
-			<li><a class="" href="resumenDeCuenta.html" 	title="" style="color:orange">Ingresar a mi cuenta</a></li>								
+			<li><a class="" href="login.html" 			title="">Ofertas</a></li>
+			<li><a class="" href="faq.html" 				title="">Abrir un lubricentro</a></li>				
 		</ul>		
 	 </nav>  <!-- end #menu-nav-wrap -->
 
