--- a/views/css/main.css
+++ b/views/css/main.css
@@ -721,7 +721,7 @@ input[type="button"] {
   font-family: "montserrat-bold", sans-serif;
   font-size: 1.4rem;
   text-transform: uppercase;
-  letter-spacing: .3rem;
+  /* letter-spacing: 0.3rem; */
   height: 5.4rem;
   line-height: 5.4rem;
   background: #A5A5A5;
@@ -737,6 +737,18 @@ input[type="button"] {
   -ms-transition: all 0.3s ease-in-out;
   transition: all 0.3s ease-in-out;
 }
+
+@media (min-width: 500px) {
+  .button,
+  a.button,
+  button,
+  input[type="submit"],
+  input[type="reset"],
+  input[type="button"] {
+    letter-spacing: 0.3rem; 
+}
+}
+
 
 .button:hover,
 a.button:hover,
