--- a/views/css/personal.css
+++ b/views/css/personal.css
@@ -6,7 +6,7 @@
     animation-iteration-count: 0;
   }
   
-  //*#WAButton:hover {
+  /*#WAButton:hover {
     /* Start the shake animation and make the animation last for 0.5 seconds */
     animation: shake 0s;
   
@@ -70,6 +70,16 @@
   transition: max-height 0.2s ease-out;}
 
 
+
+  @media only screen and (min-width: 480px) {
+    #logo{
+      width:60%;
+    }
+  }
+
+
+
+
   @media only screen and (max-width: 480px) {
     .accordion{
       font-size: 80%;
@@ -81,7 +91,19 @@
       text-align: center;
       white-space: normal;
     }
+    #qrAfip{
+      width:40%;
+    }
+    #logo{
+      width:100%;
+      text-align: center;
+    }
+    #slogan{
+      font-size: 1.7rem;;
+    }
   }
+
+  
 
   #portfolio .intro-wrap {
     padding: 3rem 0 0rem;
