--- a/views/html/listas.html
+++ b/views/html/listas.html
@@ -59,7 +59,7 @@
 <section>
 <div class="container-fluid cabecera"> 
 		<h1 id="nombreLista">Listas De Precios</h1>
-		<h2 id="ultimaActualizacion">LUBRICANTES:  10% descuento comprando de a caja cerrada</h2>
+		<h2 id="ultimaActualizacion"></h2>
 </div>
 	<div class="competenciaPlantilla competencia">
 			<div class="card">
