--- a/views/html/ofertas.html
+++ b/views/html/ofertas.html
@@ -17,6 +17,7 @@
 		<script src=									"../js/src/jquery.js"></script>
 		<script src=									"../js/src/helpers.js"></script>
     	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 		<link rel="stylesheet" type="text/css" href=	"../css/ofertasEstilo.css">			
 	</head>
 
@@ -48,18 +49,24 @@
 </header> <!-- end header -->  
 
 <body>
+	
 <!-- SECCION DE LISTAS
 ================================================== -->
 <div class="container-fluid cabecera"> 
 	<h1 id="nombreLista">Ofertas Vigentes</h1>
-	<h2 id="ultimaActualizacion">PRECIOS FINALES / Sep 2020</h2>	
+	<h2 id="ultimaActualizacion">PRECIOS FINALES / Oct 2020</h2>	
 	
 </div>
 <section class="container-fluid">
+	
 	<div class="intro-wrap col-sm-12">
+	
        	<div class="container-fluid"><h1 id="titulo">OFERTAS</h1></div>		
-       	<div class="container-fluid"><h1 id="subtitulo">COMPRA MINIMA. 12 DE CADA OFERTA</h1></div> 	 
+		   <div class="container-fluid"><h1 id="subtitulo">COMPRA MINIMA. 12 DE CADA OFERTA</h1></div> 
+		   <div class="spinner-border" role="status"><span class="sr-only"></span></div>	 
 			<div class="container-fluid competencias ofertas" style="justify-content: left;" >
+			
+				
 				<div class="row">
 				  	<div class="col-6 col-sm-6 oferta" id="plantilla" style="padding:1em;">
 					  	<div class="rectanguloOferta">
@@ -78,8 +85,7 @@
 	<section class="container-fluid">
 		<div class="intro-wrap col-sm-12">
 				<div class="container-fluid"><h1 id="titulo">Kit Filtros</h1></div>	
-				<div class="container-fluid"><h1 id="subtitulo">COMPRA MINIMA: 12 KITS SURTIDOS</h1></div> 	 
-	
+				<div class="container-fluid"><h1 id="subtitulo">COMPRA MINIMA: 6 KITS SURTIDOS</h1></div> 	 	
 			<div class="container-fluid">  
 				<div class="container-fluid  competencias kits" style="justify-content: left;" >
 					<div class="row">
@@ -103,7 +109,6 @@
 	<div class="intro-wrap col-sm-12">
 			<div class="container-fluid"><h1 id="titulo">Valvoline</h1></div>	
 			<div class="container-fluid"><h1 id="subtitulo">COMPRA MINIMA: Caja Cerrada</h1></div> 	 
-
 		<div class="container-fluid">  
 			<div class="container-fluid  competencias valvolineOfertas" style="justify-content: left;" >
 				<div class="row">
@@ -127,7 +132,6 @@
 	<div class="intro-wrap col-sm-12">
 			<div class="container-fluid"><h1 id="titulo">Motul<h1></div>	
 			<div class="container-fluid"><h1 id="subtitulo">COMPRA MINIMA: Caja Cerrada</h1></div> 	 
-
 		<div class="container-fluid">  
 			<div class="container-fluid  competencias motulOfertas" style="justify-content: left;" >
 				<div class="row">
@@ -151,7 +155,6 @@
 	<div class="intro-wrap col-sm-12">
 			<div class="container-fluid"><h1 id="titulo">Total<h1></div>	
 			<div class="container-fluid"><h1 id="subtitulo">COMPRA MINIMA: Caja Cerrada</h1></div> 	 
-
 		<div class="container-fluid">  
 			<div class="container-fluid  competencias totalOfertas" style="justify-content: left;" >
 				<div class="row">
@@ -176,7 +179,6 @@
 	<div class="intro-wrap col-sm-12">
 			<div class="container-fluid"><h1 id="titulo">Selenia<h1></div>	
 			<div class="container-fluid"><h1 id="subtitulo">COMPRA MINIMA: Caja Cerrada</h1></div> 	 
-
 		<div class="container-fluid">  
 			<div class="container-fluid  competencias seleniaOfertas" style="justify-content: left;" >
 				<div class="row">
