vuelvo a poner el menu en master

--- a/views/html/listas.html
+++ b/views/html/listas.html
@@ -25,7 +25,7 @@
 
 <!-- SIDE MENU
 ================================================== -->
-<!-- <header>
+ <header>
 
 
 	<a id="header-menu-trigger" href="#0">
@@ -43,7 +43,7 @@
 		</ul>		
 	 </nav>  end #menu-nav-wrap 
 
-</header> end header -->   -->
+</header> end header -->   
 
 
 
