comente el menu

--- a/views/html/listas.html
+++ b/views/html/listas.html
@@ -25,7 +25,7 @@
 
 <!-- SIDE MENU
 ================================================== -->
- <header>
+ <!-- <header>
 
 
 	<a id="header-menu-trigger" href="#0">
@@ -41,9 +41,9 @@
 			<li><a class="" href="login.html" 			title="">Ofertas</a></li>
 			<li><a class="" href="faq.html" 				title="">Abrir un lubricentro</a></li>				
 		</ul>		
-	 </nav>  end #menu-nav-wrap 
+	 </nav> 
 
-</header> end header -->   
+</header>     -->
 
 
 
