comento los menues en ofertas

--- a/views/html/ofertas.html
+++ b/views/html/ofertas.html
@@ -31,7 +31,7 @@
 
 <!-- SIDE MENU
 ================================================== -->
-<header>
+<!-- <header>
 	<a id="header-menu-trigger" href="#0">
 		<span class="header-menu-text">Menu</span>
 		<span class="header-menu-icon"></span>
@@ -46,7 +46,7 @@
 			 <li><a class="" href="faq.html" 				title="">Abrir un lubricentro</a></li>		
 		 </ul>	
 	 </nav>  <!-- end #menu-nav-wrap -->
-</header> <!-- end header -->  
+</header> <!-- end header -->   -->
 
 <body>
 	
