elimino menues d elas listas

--- a/views/html/ofertas.html
+++ b/views/html/ofertas.html
@@ -45,8 +45,8 @@
 			 <li><a class="" href="ofertas.html" 			title="">Ofertas</a></li>
 			 <li><a class="" href="faq.html" 				title="">Abrir un lubricentro</a></li>		
 		 </ul>	
-	 </nav>  <!-- end #menu-nav-wrap -->
-</header> <!-- end header -->   -->
+	 </nav>   end #menu-nav-wrap 
+</header>  end header -->   -->
 
 <body>
 	
