--- a/views/html/faq.html
+++ b/views/html/faq.html
@@ -74,12 +74,29 @@
 
 
 
+<div  class="seccionfull">
+	<div><iframe width="640" height="360" src="https://www.youtube.com/embed/1CMSYGJot1g" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+</div>
+
+	<!-- RESUMEN
+================================================== -->
+<section>
+	<div class="home-content-table">	
+		<div class="home-content-tablecell">
+		 <div class="row">
+				<div class="col-twelve" id="campoParrafo" style="padding:0 1rem;">			
+				 <h3></h3>
+			   </div> <!-- end col-twelve --> 
+			</div> <!-- end row --> 
+	 </div> <!-- end home-content-tablecell --> 		   
+ </div>
+</section>
+
 
     
 <!-- VIDEOS
 ================================================== -->
 <div  class="seccionfull">
-	<div><iframe width="640" height="360" src="https://www.youtube.com/embed/1CMSYGJot1g" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
 	<div><iframe width="640" height="360" src="https://www.youtube.com/embed/nho_k5NQR4Q" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
 
 
@@ -89,19 +106,7 @@
 </div>
 
 
-<!-- RESUMEN
-================================================== -->
-<section>
-	<div class="home-content-table">	
-		<div class="home-content-tablecell">
-		 <div class="row">
-				<div class="col-twelve" id="campoParrafo">			
-				 <h2></h2>
-			   </div> <!-- end col-twelve --> 
-			</div> <!-- end row --> 
-	 </div> <!-- end home-content-tablecell --> 		   
- </div>
-</section>
+
 
 
 
