--- a/views/html/listaEspecifica2.html
+++ b/views/html/listaEspecifica2.html
@@ -42,7 +42,7 @@
 
 <!-- SIDE MENU
 ================================================== -->
-<header>
+ <header>
 
 
 	<a id="header-menu-trigger" href="#0">
@@ -58,9 +58,9 @@
 			<li><a class="" href="login.html" 			title="">Ofertas</a></li>
 			<li><a class="" href="faq.html" 				title="">Abrir un lubricentro</a></li>				
 		</ul>		
-	 </nav>  <!-- end #menu-nav-wrap -->
+	 </nav> 
 
-</header> <!-- end header -->  
+</header> 
 
 
 
