agrego tag de google

--- a/views/html/listas.html
+++ b/views/html/listas.html
@@ -13,6 +13,16 @@
 		<script src="../js/src/helpers.js"></script>
 		<script src="../js/src/modernizr.js"></script>
 		<script src="..js/src/pace.min.js"></script>
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-179250562-2"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-179250562-2');
+</script>
+
 
 		<link rel="stylesheet" type="text/css" href="../css/main.css">
 		<link rel="stylesheet" type="text/css" href="../css/listas.css">
