--- a/views/html/ofertas.html
+++ b/views/html/ofertas.html
@@ -58,17 +58,13 @@
 	
 </div>
 <section class="container-fluid">
-	
 	<div class="intro-wrap col-sm-12">
-	
        	<div class="container-fluid"><h1 id="titulo">OFERTAS</h1></div>		
 		   <div class="container-fluid"><h1 id="subtitulo">COMPRA MINIMA. 12 DE CADA OFERTA</h1></div> 
 		   <div class="spinner-border" role="status"><span class="sr-only"></span></div>	 
 			<div class="container-fluid competencias ofertas" style="justify-content: left;" >
-			
-				
 				<div class="row">
-				  	<div class="col-6 col-sm-6 oferta" id="plantilla" style="padding:1em;">
+				  	<div class="col-6 col-sm-3 oferta" id="plantilla" style="padding:1em;">
 					  	<div class="rectanguloOferta">
 							<h2 class="titulo"></h2>
 							<h5 class="detalle"></h5>
@@ -80,6 +76,31 @@
 		</div> 
 	</div>
 </section>
+
+
+
+<section class="container-fluid">
+	<div class="intro-wrap col-sm-12">
+			<div class="container-fluid"><h1 id="titulo">Ofertas Filtros</h1></div>	
+			<div class="container-fluid"><h1 id="subtitulo">COMPRA MINIMA: 24 unidade surtidas</h1></div> 	 	
+			<div class="container-fluid">  
+			<div class="container-fluid  competencias ofertaFiltros" style="justify-content: left;" >
+				<div class="row">
+					  <div class="col-6 col-sm-3 ofertaFiltro" id="plantilla2" style="padding:1em;">
+						  <div class="rectanguloOferta">
+							<h2 class="titulo"></h2>
+							<h5 class="detalle"></h5>
+							<img class="imagenKit">
+							<h2 class="precio"></h2>
+						  </div>
+					</div>
+				  
+			</div> 
+		</div>
+	</div>  
+</div>
+</section>
+
 
  
 	<section class="container-fluid">
