--- a/views/html/ofertas.html
+++ b/views/html/ofertas.html
@@ -46,7 +46,7 @@
 			 <li><a class="" href="faq.html" 				title="">Abrir un lubricentro</a></li>		
 		 </ul>	
 	 </nav>   end #menu-nav-wrap 
-</header>  end header -->   -->
+</header>  end header -->  
 
 <body>
 	
@@ -110,15 +110,14 @@
 			<div class="container-fluid">  
 				<div class="container-fluid  competencias kits" style="justify-content: left;" >
 					<div class="row">
-					  	<div class="col-6 col-sm-4 kit" id="plantilla2" style="padding:1em;">
+					  	<div class="col-6 col-sm-3 kit" id="plantilla2" style="padding:1em;">
 						  	<div class="rectanguloOferta">
 								<h2 class="titulo"></h2>
 								<h5 class="detalle"></h5>
 								<img class="imagenKit">
 								<h2 class="precio"></h2>
 						  	</div>
-						</div>
-					  
+						</div>	  
 				</div> 
 			</div>
 		</div>  
