--- a/views/html/ofertas.html
+++ b/views/html/ofertas.html
@@ -57,7 +57,7 @@
 	<h2 id="ultimaActualizacion">PRECIOS FINALES / Oct 2020</h2>	
 	
 </div>
-<section class="container-fluid">
+<section class="container-fluid ">
 	<div class="intro-wrap col-sm-12">
        	<div class="container-fluid"><h1 id="titulo">OFERTAS</h1></div>		
 		   <div class="container-fluid"><h1 id="subtitulo">COMPRA MINIMA. 12 DE CADA OFERTA</h1></div> 
@@ -78,23 +78,21 @@
 </section>
 
 
-
 <section class="container-fluid">
-	<div class="intro-wrap col-sm-12">
-			<div class="container-fluid"><h1 id="titulo">Ofertas Filtros</h1></div>	
-			<div class="container-fluid"><h1 id="subtitulo">COMPRA MINIMA: 24 unidade surtidas</h1></div> 	 	
-			<div class="container-fluid">  
+	<div class="intro-wrap col-sm-12 negro">
+			<div class="container-fluid"><h1 id="titulo">FILTROS</h1></div>	
+			<div class="container-fluid"><h1 id="subtitulo">COMPRA MINIMA: 48 filtros surtidos</h1></div> 	 	
+		<div class="container-fluid">  
 			<div class="container-fluid  competencias ofertaFiltros" style="justify-content: left;" >
 				<div class="row">
-					  <div class="col-6 col-sm-3 ofertaFiltro" id="plantilla2" style="padding:1em;">
+					  <div class="col-6 col-sm-3 ofertaFiltro" id="plantilla7" style="padding:1em;">
 						  <div class="rectanguloOferta">
 							<h2 class="titulo"></h2>
 							<h5 class="detalle"></h5>
 							<img class="imagenKit">
 							<h2 class="precio"></h2>
 						  </div>
-					</div>
-				  
+					</div>	  
 			</div> 
 		</div>
 	</div>  
@@ -105,7 +103,7 @@
  
 	<section class="container-fluid">
 		<div class="intro-wrap col-sm-12">
-				<div class="container-fluid"><h1 id="titulo">Kit Filtros</h1></div>	
+				<div class="container-fluid"><h1 id="titulo">KIT FILTROS</h1></div>	
 				<div class="container-fluid"><h1 id="subtitulo">COMPRA MINIMA: 6 KITS SURTIDOS</h1></div> 	 	
 			<div class="container-fluid">  
 				<div class="container-fluid  competencias kits" style="justify-content: left;" >
@@ -126,13 +124,13 @@
 
 
 <section class="container-fluid">
-	<div class="intro-wrap col-sm-12">
-			<div class="container-fluid"><h1 id="titulo">Valvoline</h1></div>	
+	<div class="intro-wrap col-sm-12 negro">
+			<div class="container-fluid"><h1 id="titulo">VALVOLINE</h1></div>	
 			<div class="container-fluid"><h1 id="subtitulo">COMPRA MINIMA: Caja Cerrada</h1></div> 	 
 		<div class="container-fluid">  
 			<div class="container-fluid  competencias valvolineOfertas" style="justify-content: left;" >
 				<div class="row">
-					  <div class="col-6 col-sm-4 valvoline" id="plantilla3" style="padding:1em;">
+					  <div class="col-6 col-sm-3 valvoline" id="plantilla3" style="padding:1em;">
 						  <div class="rectanguloOferta">
 							<h2 class="titulo"></h2>
 							<h5 class="detalle"></h5>
@@ -150,12 +148,12 @@
 
 <section class="container-fluid">
 	<div class="intro-wrap col-sm-12">
-			<div class="container-fluid"><h1 id="titulo">Motul<h1></div>	
+			<div class="container-fluid"><h1 id="titulo">MOTUL<h1></div>	
 			<div class="container-fluid"><h1 id="subtitulo">COMPRA MINIMA: Caja Cerrada</h1></div> 	 
 		<div class="container-fluid">  
 			<div class="container-fluid  competencias motulOfertas" style="justify-content: left;" >
 				<div class="row">
-					  <div class="col-6 col-sm-4 motul" id="plantilla4" style="padding:1em;">
+					  <div class="col-6 col-sm-3 motul" id="plantilla4" style="padding:1em;">
 						  <div class="rectanguloOferta">
 							<h2 class="titulo"></h2>
 							<h5 class="detalle"></h5>
@@ -171,14 +169,14 @@
 </section>
 
 
-<section class="container-fluid">
-	<div class="intro-wrap col-sm-12">
-			<div class="container-fluid"><h1 id="titulo">Total<h1></div>	
+<section class="container-fluid ">
+	<div class="intro-wrap col-sm-12 negro">
+			<div class="container-fluid"><h1 id="titulo">TOTAL<h1></div>	
 			<div class="container-fluid"><h1 id="subtitulo">COMPRA MINIMA: Caja Cerrada</h1></div> 	 
 		<div class="container-fluid">  
 			<div class="container-fluid  competencias totalOfertas" style="justify-content: left;" >
 				<div class="row">
-					  <div class="col-6 col-sm-4 total" id="plantilla5" style="padding:1em;">
+					  <div class="col-6 col-sm-3 total" id="plantilla5" style="padding:1em;">
 						  <div class="rectanguloOferta">
 							<h2 class="titulo"></h2>
 							<h5 class="detalle"></h5>
@@ -195,14 +193,14 @@
 
 
 
-<section class="container-fluid">
+<section class="container-fluid blanco">
 	<div class="intro-wrap col-sm-12">
-			<div class="container-fluid"><h1 id="titulo">Selenia<h1></div>	
+			<div class="container-fluid"><h1 id="titulo">SELENIA<h1></div>	
 			<div class="container-fluid"><h1 id="subtitulo">COMPRA MINIMA: Caja Cerrada</h1></div> 	 
 		<div class="container-fluid">  
 			<div class="container-fluid  competencias seleniaOfertas" style="justify-content: left;" >
 				<div class="row">
-					  <div class="col-6 col-sm-4 selenia" id="plantilla6" style="padding:1em;">
+					  <div class="col-6 col-sm-3 selenia" id="plantilla6" style="padding:1em;">
 						  <div class="rectanguloOferta">
 							<h2 class="titulo"></h2>
 							<h5 class="detalle"></h5>
