--- a/views/css/ofertasEstilo.css
+++ b/views/css/ofertasEstilo.css
@@ -14,22 +14,26 @@ body {
 	width:100%;
 	text-align: center;
 	margin:0px;
-    padding:0px;
-    
+    padding:0px;    
 }
-  
+.blanco{
+    background-color:whitesmoke;
+}
+
 .cabecera{
 	background-color: #000000;
 	background-size: 100%;
 	height:15rem;
 	margin:0px;
 	padding:5vh;
-	padding-bottom:10vh;
+    padding-bottom:10vh;
+    margin-bottom:3rem;
 }
   
   
 .cabecera h1{
-	font-family: "librebaskerville-bold", serif;
+    font-family: "librebaskerville-bold", serif;
+    
 	font-size: 4.8rem;
 	color:white;
 	text-shadow: 2px 2px 4px #000000;
@@ -45,27 +49,33 @@ body {
 } 
 
 /*///////////////////////////////TITULO Y SIBTITULO*/
+
 .container-fluid #titulo{
-    color:black;
-    text-decoration:underline;
+    background-image: linear-gradient(-45deg, black 25%, transparent 25%, transparent 50%, black 50%, black 75%, transparent 75%, transparent);
+    background-size: 4px 4px;
+    color:rgb(255, 255, 255);
     font-family: "librebaskerville-bold", serif;
-    margin-top:3vmin;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+    padding-top:2rem;
     font-size:8vmin;
-    padding-top:10vmin;
-    text-shadow: 2px 2px 4px rgb(83, 83, 83);
+    padding-bottom:2rem;
+    text-shadow: 4px 4px 8px rgb(12, 12, 12);
    
 }
 .container-fluid #subtitulo{
-    color:rgb(251, 88, 13);
-    font-size:rem;
-    padding-bottom: 2vmin;
+    background-color:orange;
+    color:rgb(255, 255, 255);
+    font-size:2.5rem;
     text-align:center;
+    padding:0.5rem 0;
 }
 
-#seccionLista{
-    background-color: black;
-  
+
+.intro-wrap {
+    margin-bottom:5rem;
 }
+
 
 /*///////////////////////////////KITS y OFERTAS */
 .titulo{
