--- a/views/css/ofertasEstilo.css
+++ b/views/css/ofertasEstilo.css
@@ -58,12 +58,14 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     font-weight: bold;
     padding-top:2rem;
+    margin:0 8rem;
     font-size:8vmin;
     padding-bottom:2rem;
     text-shadow: 4px 4px 8px rgb(12, 12, 12);
    
 }
 .container-fluid #subtitulo{
+    margin:0 8rem;
     background-color:orange;
     color:rgb(255, 255, 255);
     font-size:2.5rem;
@@ -84,7 +86,7 @@ body {
     text-align: center;
     padding:0.4em;
     color:whitesmoke;
-    font-size: 3.5vmin;
+    font-size: 1.5rem;
 
 
 }
@@ -103,20 +105,28 @@ body {
    font-size:1.3rem;
    height:5em;  
    text-align:center;
+   letter-spacing: 0.1rem;
 }
 
 .imagenKit{
-    height:13rem;
+    height:13vh;
   }
 
 .imagenOferta{
     height:20rem;
 }
 
-.rectanguloOfertas{
-   height:15%;
+.rectanguloOferta{
+   
+   -webkit-box-shadow: 6px 6px 7px -2px rgba(161,161,161,0.57);
+   -moz-box-shadow: 6px 6px 7px -2px rgba(161,161,161,0.57);
+   box-shadow: 6px 6px 7px -2px rgba(161,161,161,0.57);
+   background-color: white;
 }
 
+#plantilla{
+    padding:0.1rem;
+}
 .ofertas {
     justify-content: left;
 }
@@ -125,13 +135,6 @@ body {
     justify-content: left;;
 }
 
-.rectanguloOferta{
-    -webkit-box-shadow: 6px 6px 7px -2px rgba(161,161,161,0.57);
-    -moz-box-shadow: 6px 6px 7px -2px rgba(161,161,161,0.57);
-    box-shadow: 6px 6px 7px -2px rgba(161,161,161,0.57);
-    background-color: white;
-
-}
 
 /*/////////////////////////RESPONSIVE//*/
 @media only screen and (max-width: 450px) {
@@ -150,10 +153,15 @@ body {
     }
 
     .precio{
-        font-size:3em;  
+        font-size:1.5rem;  
         text-align:center;
         padding-right: 0
 
+    }
+    #irALista >h1{
+        font-size:1.5rem;  
+        text-align:center;
+        padding-right: 0
     }
     .cabecera{
         padding-top:8em;
@@ -163,17 +171,28 @@ body {
         font-size:2.2rem;
     }
 
-    .imagenKit{
-        height:25vmin;
-      }
-    
+    .container-fluid #subtitulo{
+        font-size:1rem;
+        margin:0px;
+        
+    }
     .imagenOferta{
-        height:20vmin;
+        height:15vh;
     }
     .detalle{
+        font-size:0.8rem;
+    }
+    .titulo{
         font-size:1.2rem;
     }
-    
+    .container-fluid #titulo{
+        padding-top:1rem;
+        font-size:3rem;
+        padding-bottom:1rem;
+        margin:0;
+       
+    }
+  
   }
 
 
