--- a/views/html/ofertas.html
+++ b/views/html/ofertas.html
@@ -64,7 +64,7 @@
 		   <div class="spinner-border" role="status"><span class="sr-only"></span></div>	 
 			<div class="container-fluid competencias ofertas" style="justify-content: left;" >
 				<div class="row">
-				  	<div class="col-6 col-sm-3 oferta" id="plantilla" style="padding:1em;">
+				  	<div class="col-3 col-sm-3 oferta" id="plantilla">
 					  	<div class="rectanguloOferta">
 							<h2 class="titulo"></h2>
 							<h5 class="detalle"></h5>
@@ -85,7 +85,7 @@
 		<div class="container-fluid">  
 			<div class="container-fluid  competencias ofertaFiltros" style="justify-content: left;" >
 				<div class="row">
-					  <div class="col-6 col-sm-3 ofertaFiltro" id="plantilla7" style="padding:1em;">
+					  <div class="col-3 col-sm-3 ofertaFiltro" id="plantilla7" style="padding:0.1em;">
 						  <div class="rectanguloOferta">
 							<h2 class="titulo"></h2>
 							<h5 class="detalle"></h5>
@@ -130,7 +130,7 @@
 		<div class="container-fluid">  
 			<div class="container-fluid  competencias valvolineOfertas" style="justify-content: left;" >
 				<div class="row">
-					  <div class="col-6 col-sm-3 valvoline" id="plantilla3" style="padding:1em;">
+					  <div class="col-3 col-sm-3 valvoline" id="plantilla3" style="padding:1em;">
 						  <div class="rectanguloOferta">
 							<h2 class="titulo"></h2>
 							<h5 class="detalle"></h5>
