--- a/views/css/ofertasEstilo.css
+++ b/views/css/ofertasEstilo.css
@@ -51,8 +51,7 @@ body {
 /*///////////////////////////////TITULO Y SIBTITULO*/
 
 .container-fluid #titulo{
-    background-image: linear-gradient(-45deg, black 25%, transparent 25%, transparent 50%, black 50%, black 75%, transparent 75%, transparent);
-    background-size: 4px 4px;
+   background-color:black;
     color:rgb(255, 255, 255);
     font-family: "librebaskerville-bold", serif;
     font-family: Arial, Helvetica, sans-serif;
@@ -62,15 +61,21 @@ body {
     font-size:8vmin;
     padding-bottom:2rem;
     text-shadow: 4px 4px 8px rgb(12, 12, 12);
+    transform: skewY(-2deg) translateY(+2rem);
+    z-index:1;
+
    
 }
 .container-fluid #subtitulo{
+    /* background-image: linear-gradient( 45deg, orange 25%, transparent 25%, transparent 50%, orange 50%,orange 75%, transparent 75%, transparent); */
+    background-color: orange;
+    background-size: 5px 5px;
     margin:0 8rem;
-    background-color:orange;
-    color:rgb(255, 255, 255);
+
+    color:black;
     font-size:2.5rem;
     text-align:center;
-    padding:0.5rem 0;
+    padding:1rem 0;
 }
 
 
@@ -108,11 +113,13 @@ body {
    letter-spacing: 0.1rem;
 }
 
-.imagenKit .imagenOferta{
+.imagenKit{
     height:13vh;
   }
 
-
+.imagenOferta{
+    height:20rem;
+}
 
 .rectanguloOferta{
    
@@ -122,9 +129,6 @@ body {
    background-color: white;
 }
 
-#plantilla{
-    padding:0.1rem;
-}
 .ofertas {
     justify-content: left;
 }
@@ -133,6 +137,10 @@ body {
     justify-content: left;;
 }
 
+#plantilla7, #plantilla1, #plantilla2, #plantilla3, #plantilla4, #plantilla5, #plantilla6, #plantilla{
+  padding:1px;
+
+}
 
 /*/////////////////////////RESPONSIVE//*/
 @media only screen and (max-width: 450px) {
@@ -184,9 +192,9 @@ body {
         font-size:1.2rem;
     }
     .container-fluid #titulo{
-        padding-top:1rem;
-        font-size:3rem;
-        padding-bottom:1rem;
+        padding-top:0.5rem;
+        font-size:2rem;
+        padding-bottom:0.5rem;
         margin:0;
        
     }
