--- a/views/html/ofertas.html
+++ b/views/html/ofertas.html
@@ -59,8 +59,9 @@
 </div>
 <section class="container-fluid ">
 	<div class="intro-wrap col-sm-12">
-       	<div class="container-fluid"><h1 id="titulo">OFERTAS</h1></div>		
+       	<div class="container-fluid"><h1 id="titulo">OFERTAS</h1>	
 		   <div class="container-fluid"><h1 id="subtitulo">COMPRA MINIMA. 12 DE CADA OFERTA</h1></div> 
+		</div>	
 		   <div class="spinner-border" role="status"><span class="sr-only"></span></div>	 
 			<div class="container-fluid competencias ofertas" style="justify-content: left;" >
 				<div class="row">
@@ -85,7 +86,7 @@
 		<div class="container-fluid">  
 			<div class="container-fluid  competencias ofertaFiltros" style="justify-content: left;" >
 				<div class="row">
-					  <div class="col-3 col-sm-3 ofertaFiltro" id="plantilla7" style="padding:0.1em;">
+					  <div class="col-3 col-sm- ofertaFiltro" id="plantilla7" >
 						  <div class="rectanguloOferta">
 							<h2 class="titulo"></h2>
 							<h5 class="detalle"></h5>
@@ -108,7 +109,7 @@
 			<div class="container-fluid">  
 				<div class="container-fluid  competencias kits" style="justify-content: left;" >
 					<div class="row">
-					  	<div class="col-6 col-sm-3 kit" id="plantilla2" style="padding:1em;">
+					  	<div class="col-6 col-sm-3 kit" id="plantilla2">
 						  	<div class="rectanguloOferta">
 								<h2 class="titulo"></h2>
 								<h5 class="detalle"></h5>
@@ -130,7 +131,7 @@
 		<div class="container-fluid">  
 			<div class="container-fluid  competencias valvolineOfertas" style="justify-content: left;" >
 				<div class="row">
-					  <div class="col-3 col-sm-3 valvoline" id="plantilla3" style="padding:1em;">
+					  <div class="col-3 col-sm-3 valvoline" id="plantilla3">
 						  <div class="rectanguloOferta">
 							<h2 class="titulo"></h2>
 							<h5 class="detalle"></h5>
@@ -153,7 +154,7 @@
 		<div class="container-fluid">  
 			<div class="container-fluid  competencias motulOfertas" style="justify-content: left;" >
 				<div class="row">
-					  <div class="col-6 col-sm-3 motul" id="plantilla4" style="padding:1em;">
+					  <div class="col-6 col-sm-3 motul" id="plantilla4">
 						  <div class="rectanguloOferta">
 							<h2 class="titulo"></h2>
 							<h5 class="detalle"></h5>
@@ -176,7 +177,7 @@
 		<div class="container-fluid">  
 			<div class="container-fluid  competencias totalOfertas" style="justify-content: left;" >
 				<div class="row">
-					  <div class="col-6 col-sm-3 total" id="plantilla5" style="padding:1em;">
+					  <div class="col-6 col-sm-3 total" id="plantilla5">
 						  <div class="rectanguloOferta">
 							<h2 class="titulo"></h2>
 							<h5 class="detalle"></h5>
@@ -200,7 +201,7 @@
 		<div class="container-fluid">  
 			<div class="container-fluid  competencias seleniaOfertas" style="justify-content: left;" >
 				<div class="row">
-					  <div class="col-6 col-sm-3 selenia" id="plantilla6" style="padding:1em;">
+					  <div class="col-6 col-sm-3 selenia" id="plantilla6">
 						  <div class="rectanguloOferta">
 							<h2 class="titulo"></h2>
 							<h5 class="detalle"></h5>
