--- a/views/html/listaEspecifica2.html
+++ b/views/html/listaEspecifica2.html
@@ -72,7 +72,7 @@
 <div class="container-fluid cabecera"> 
 	<h1 id="nombreLista"></h1>
 
-	<h2>Precios unitarios Finales.</h2>
+	<h2 style="color:yellow">PRECIOS UNITARIOS FINALES.</h2>
 	<h2 id="descuento"></h2>
 </div>
 
