--- a/views/css/ofertasEstilo.css
+++ b/views/css/ofertasEstilo.css
@@ -19,8 +19,10 @@ body {
 
 
 .cabecera{
-	background-color: #000000;
-	background-size: 100%;
+    background-color: #000000;
+    background-image: linear-gradient( 135deg, orange 25%, transparent 25%, transparent 50%, orange 50%,orange 75%, transparent 75%, transparent);
+    background-size: 10px 10px;
+
 	height:15rem;
 	margin:0px;
 	padding:5vh;
@@ -70,7 +72,7 @@ body {
     font-style: italic;
     background-size: 5px 5px;
     margin:0 8rem;
-    color:red;
+    color:rgb(0, 0, 0);
     font-size:2.5rem;
     text-align:right;
     padding-top:2rem;
@@ -85,11 +87,11 @@ body {
 /*///////////////////////////////KITS y OFERTAS */
 .titulo{
     background-color: black;
-    padding-left: 0.5em;
     text-align: center;
-    padding:0.4em;
+    padding:0.4em 0;
     color:whitesmoke;
     font-size: 1.5rem;
+    letter-spacing: 0px;
 
 
 }
@@ -186,7 +188,7 @@ body {
         font-size:0.8rem;
     }
     .titulo{
-        font-size:1.2rem;
+        font-size:1rem;
     }
     .container-fluid #titulo{
         padding-top:0.5rem;
