--- a/views/html/listas.html
+++ b/views/html/listas.html
@@ -68,6 +68,7 @@
 <section>
 <div class="container-fluid cabecera"> 
 		<h1 id="nombreLista">Listas De Precios</h1>
+		<h3  style="color:rgb(255, 0, 0);transform:translateY(-1rem);">TODOS PRECIOS FINALES!</h3>
 		<h2 id="ultimaActualizacion"></h2>
 </div>
 
