saque los spiners

--- a/views/html/faq.html
+++ b/views/html/faq.html
@@ -21,6 +21,24 @@
 <!-- pace infinity    --><script src="../js/src/pace.min.js"></script>
 <!-- #rWPP            --><script type="text/javascript" src="https://rawcdn.githack.com/rafaelbotazini/floating-whatsapp/3d18b26d5c7d430a1ab0b664f8ca6b69014aed68/floating-wpp.min.js"></script>
 
+<!-- Global site tag (gtag.js) - Google Ads: 963730457 -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-963730457"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'AW-963730457');
+</script>
+<!-- Event snippet for Website sale conversion page -->
+<script>
+	gtag('event', 'conversion', {
+		'send_to': 'AW-963730457/bIxHCP_s5OIBEJm4xcsD',
+		'transaction_id': ''
+	});
+  </script>
+  
+
 </head>
 <body >
 
