--- a/views/html/listas.html
+++ b/views/html/listas.html
@@ -15,6 +15,24 @@
 		<script src="..js/src/pace.min.js"></script>
 		<!-- Global site tag (gtag.js) - Google Analytics -->
 		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-179250562-2"></script>
+		<!-- Global site tag (gtag.js) - Google Ads: 963730457 -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-963730457"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'AW-963730457');
+</script>
+<!-- Event snippet for Website sale conversion page -->
+<script>
+	gtag('event', 'conversion', {
+		'send_to': 'AW-963730457/bIxHCP_s5OIBEJm4xcsD',
+		'transaction_id': ''
+	});
+  </script>
+  
+
 		<script>
 		  window.dataLayer = window.dataLayer || [];
 		  function gtag(){dataLayer.push(arguments);}
