--- a/views/html/ofertas.html
+++ b/views/html/ofertas.html
@@ -18,7 +18,17 @@
 		<script src=									"../js/src/helpers.js"></script>
     	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-		<link rel="stylesheet" type="text/css" href=	"../css/ofertasEstilo.css">			
+		<link rel="stylesheet" type="text/css" href=	"../css/ofertasEstilo.css">		
+		<!-- Global site tag (gtag.js) - Google Ads: 963730457 -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-963730457"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'AW-963730457');
+</script>
+	
 	</head>
 
 <!--salto de linea en negro al ppio de la hoja-->
@@ -31,7 +41,7 @@
 
 <!-- SIDE MENU
 ================================================== -->
-<!-- <header>
+ <header>
 	<a id="header-menu-trigger" href="#0">
 		<span class="header-menu-text">Menu</span>
 		<span class="header-menu-icon"></span>
