--- a/views/html/stock2.html
+++ b/views/html/stock2.html
@@ -27,6 +27,16 @@
   <!-- print pantalla         --><script src="https://unpkg.com/bootstrap-table@1.17.1/dist/extensions/print/bootstrap-table-print.min.js"></script>
   <!-- loading template       <link href="https://unpkg.com/placeholder-loading/dist/css/placeholder-loading.min.css" rel="stylesheet">-->
   <link rel="stylesheet" href="../css/listaEspecifica2.css">
+  <!-- Global site tag (gtag.js) - Google Ads: 963730457 -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-963730457"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'AW-963730457');
+</script>
+
 
 </head> 
 
