--- a/views/html/listaEspecifica2.html
+++ b/views/html/listaEspecifica2.html
@@ -36,17 +36,23 @@
 		<link rel="stylesheet" type="text/css" href="../css/personal.css">
 		<link rel="stylesheet" href="https://rawcdn.githack.com/rafaelbotazini/floating-whatsapp/3d18b26d5c7d430a1ab0b664f8ca6b69014aed68/floating-wpp.min.css">
 		<link rel="stylesheet" href="../css/listaEspecifica2.css">
+		<!-- Global site tag (gtag.js) - Google Ads: 963730457 -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-963730457"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'AW-963730457');
+</script>
+
 		</head>
 
 
 
 <!-- SIDE MENU
 ================================================== -->
-<<<<<<< HEAD
  <header>
-=======
-<!-- <header>
->>>>>>> listas
 
 
 	<a id="header-menu-trigger" href="#0">
@@ -64,11 +70,7 @@
 		</ul>		
 	 </nav> 
 
-<<<<<<< HEAD
 </header> 
-=======
-</header>  -->
->>>>>>> listas
 
 
 
