--- a/views/html/login.html
+++ b/views/html/login.html
@@ -15,6 +15,24 @@
   <link rel="stylesheet" type="text/css" href="../css/login.css">
   <script src="../js/src/jquery-2.1.3.min.js"></script>
   <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+  <!-- Global site tag (gtag.js) - Google Ads: 963730457 -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-963730457"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'AW-963730457');
+</script>
+
+<!-- Event snippet for Website sale conversion page -->
+<script>
+  gtag('event', 'conversion', {
+      'send_to': 'AW-963730457/bIxHCP_s5OIBEJm4xcsD',
+      'transaction_id': ''
+  });
+</script>
+
 
 
 </head>
