--- a/views/html/stockCritico.html
+++ b/views/html/stockCritico.html
@@ -17,6 +17,16 @@
   <script src= "https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"> </script> 
   <script src= "https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"> </script> 
   <script src= "https://unpkg.com/bootstrap-table@1.16.0/dist/bootstrap-table.min.js"> </script> 
+  <!-- Global site tag (gtag.js) - Google Ads: 963730457 -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-963730457"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'AW-963730457');
+</script>
+
 </head> 
 
 
