--- a/views/html/listaEspecifica2.html
+++ b/views/html/listaEspecifica2.html
@@ -75,7 +75,6 @@
 	<h2 style="color:yellow">PRECIOS UNITARIOS FINALES.</h2>
 	<h2 id="descuento"></h2>
 </div>
-<!---->
 
 
 <section id="seccionLista">
@@ -100,12 +99,14 @@
 							data-loading-template="loadingTemplate">
 							<thead class="thead-dark" > 
 							
-							  <tr> 
-								<th data-field="id"data-width="10" data-width-unit="%" >  								Articulo		</span style="text-align: center;"></th> 
-								<th data-field="d" class="text-wrap">  													Descripcion		</span style="text-align: left;"> </th> 
-								<th data-field="r" data-width="20" data-width-unit="%"data-card-visible="false">  		Rubro			</span> </th> 
-								<th data-field="pf" data-width="90" data-align="center">  								Precio con IVA 	 </th>  
-								<th data-field="s" data-width="90" class="text-right" >     							Stock 			</span> </th> -->
+							  <tr> 	
+								<th data-field="id"data-width="10" data-width-unit="%" >  								Articulo			</span style="text-align: center;"></th> 
+								
+								<th data-field="d" class="text-wrap">  													Descripcion			</span style="text-align: left;"> </th> 
+								<th data-field="r" data-width="20" data-width-unit="%"data-card-visible="false">  		Rubro				</span> </th> 
+								<th data-field="pf" data-width="90" data-align="center">  								UNITARIO	 		</th>  
+								<th data-field="p" data-width="90" data-align="center">  								CAJA CERRADA		</th>  
+								<th data-field="s" data-width="90" class="text-right" >     							Stock 				</span> </th> 
 							
 							  </tr> 
 						</thead> 
