nevas modificaicones en la lista

--- a/views/html/listaEspecifica2.html
+++ b/views/html/listaEspecifica2.html
@@ -88,6 +88,7 @@
 							data-mobile-responsive="true"
 							data-search-align="left"
 							data-search="true"
+							data-search-placeholder="buscar"
 							data-show-export="true"
 							data-show-columns="true"
 							data-key-events="true"
@@ -96,7 +97,9 @@
 							data-toolbar-align="left"
 							data-show-header="false"
 							data-group-by-field="r"
-							data-loading-template="loadingTemplate">
+							data-loading-template="loadingTemplate"
+							>
+							
 							<thead class="thead-dark" > 
 							
 							  <tr> 	
